# libnetconf

./: AUTHORS  COPYING  Doxyfile  Doxyfile.in  Doxyfile.python  INSTALL  Makefile  Makefile.in  ProjectHome.md  README  README.md  RELEASE_NOTES  aclocal.m4  config.status  configure  configure.in  libnetconf.notifications.conf  libnetconf.pc  libnetconf.pc.in  libnetconf.spec  libnetconf.spec.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dev-tools/lncdatastore/: Makefile  Makefile.in  README  commands.c  commands.h  main.c  mreadline.c
dev-tools/lnctool/: README  lnctool.in
dev-tools/lnctool/generator/: Makefile.in  configure.in
doc/: doxygen.stamp
doc/compat_reports/0.2.3_to_0.3.0/: compat_report.html
doc/compat_reports/0.3.0_to_0.3.1/: compat_report.html
doc/compat_reports/0.3.1_to_0.4.0/: compat_report.html
doc/compat_reports/0.4.0_to_0.5.0/: compat_report.html
doc/compat_reports/0.5.0_to_0.6.0/: compat_report.html
doc/compat_reports/0.6.0_to_0.6.1/: compat_report.html
doc/compat_reports/0.6.0_to_0.7.0/: compat_report.html
doc/compat_reports/0.6.1_to_0.6.2/: compat_report.html
doc/compat_reports/0.7.0_to_0.7.1/: compat_report.html
doc/compat_reports/0.7.0_to_0.8.0/: compat_report.html
doc/compat_reports/0.7.1_to_0.8.0/: compat_report.html
doc/compat_reports/0.8.0_to_0.9.0/: compat_report.html
doc/compat_reports/0.9.0_to_0.10.0/: compat_report.html
doc/compat_reports/0.9.0_to_0.9.1/: compat_report.html
doc/compat_reports/0.9.1_to_0.9.2/: compat_report.html
doc/doxygen/html/: annotated.html  annotated.js  classes.html  dir_000000_000001.html  dir_3bbb245f4a07eb52afcf06a24397c3a2.html  dir_4c3e86d48ad24315b6a6c01960b3f6fe.html  dir_4c3e86d48ad24315b6a6c01960b3f6fe.js  dir_4c3e86d48ad24315b6a6c01960b3f6fe_dep.map  dir_4c3e86d48ad24315b6a6c01960b3f6fe_dep.md5  dir_5cf91f2d325c7b4198cad664054031d4.html  dir_5cf91f2d325c7b4198cad664054031d4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7dacf7d2814451f038ee913ee9d9cfe7.html  dir_7dacf7d2814451f038ee913ee9d9cfe7.js  dir_7dacf7d2814451f038ee913ee9d9cfe7_dep.map  dir_7dacf7d2814451f038ee913ee9d9cfe7_dep.md5  dirs.html  doxygen.css  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_0x65.html  globals_0x6d.html  globals_0x6e.html  globals_0x74.html  globals_0x78.html  globals_0x79.html  globals_defs.html  globals_dup.js  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_m.html  globals_n.html  (+15 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_4.js  all_61.js  all_63.html  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6b.js  (+104 more)
doc/python/: netconf.py
doc/python/html/: annotated.html  annotated.js  apps.html  classes.html  classnetconf_1_1_session-members.html  classnetconf_1_1_session.html  classnetconf_1_1_session.js  dir_9ec253f77fa2d494e5c0651321104991.html  dir_e68e8157741866f444e17edd764ebbae.html  functions.html  functions_func.html  functions_vars.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacenetconf.html  namespacenetconf.js  namespaces.html  namespaces.js  navtree.js  navtreeindex0.js  pages.html
examples/: README
examples/apps/: Makefile  README  callhome.c  get.c  notif.c  stunnel.callhome.conf
examples/client/: Makefile  Makefile.in  commands.c  commands.h  configuration.c  configuration.h  filter.xml  main.c  mreadline.c
examples/server/: Makefile  Makefile.in  README.cfgdir  main.c
examples/server/transapi/: Makefile.in  config.status  configure  configure.in  toaster.c  toaster.spec
examples/tools/: Makefile  Makefile.in  read_events.c
headers/: libnetconf.h  libnetconf.h.in  libnetconf_ssh.h  libnetconf_ssh.h.in  libnetconf_tls.h  libnetconf_xml.h  libnetconf_xml.h.in
lnc-tool/: lnc-tool.in
lnctool/: README  lnctool.in
lnctool/generator/: configure.in
models/: ietf-inet-types.xxd  ietf-inet-types.yang  ietf-inet-types.yin  ietf-netconf-acm-config.rng.in  ietf-netconf-acm-data.rng  ietf-netconf-acm-data.rng.in  ietf-netconf-acm-gdefs-config.rng  ietf-netconf-acm-schematron.xsl  ietf-netconf-acm.xxd  ietf-netconf-notifications.xxd  ietf-netconf-notifications.yang  ietf-netconf-notifications.yin  ietf-netconf-server.yang  ietf-netconf-with-defaults.xxd  ietf-netconf-with-defaults.yin  ietf-netconf.xxd  ietf-netconf.yang  ietf-netconf.yin  ietf-yang-types.xxd  ietf-yang-types.yin  libnetconf-notifications.xxd  libnetconf-notifications.yang  libnetconf-notifications.yin  nc-notifications.xxd  notifications.xxd  notifications.yang  yin2yang.xsl
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
python/: Makefile  README  netconf.c  netconf.h  python3-netconf.spec.in  session.c  setup.py
python/doc/: Makefile
python/doc/source/: conf.py  index.rst
python/examples/: editconfig.py  get.py  server.py
src/: callbacks.c  callbacks.h  callbacks_ssh.h  callhome.h  compat.c  config.h  config.h.in  datastore.c  datastore.h  datastore_xml.h  error.c  error.h  internal.c  libnetconf.h  libnetconf_ssh.h  libnetconf_tls.h  libnetconf_xml.h  messages.c  messages.h  messages_internal.h  messages_xml.h  nacm.c  nacm.h  netconf.h  netconf_internal.h  notifications.c  notifications.h  notifications_xml.h  reverse_ssh.h  session.c  session.h  ssh.c  ssh.h  tls.c  tls.h  transapi.h  transport.c  transport.h  url.c  url.h  (+5 more)
src/datastore/: datastore_internal.h  edit_config.c  edit_config.h
src/datastore/custom/: datastore_custom.c  datastore_custom.h  datastore_custom_private.h
src/datastore/empty/: datastore_empty.c  datastore_empty.h
src/datastore/file/: datastore_file.c  datastore_file.h
src/transapi/: transapi.c  transapi.h  transapi_internal.h  transapi_xml.h  xmldiff.c  xmldiff.h  yinparser.c  yinparser.h
src/transapi/generator/: Makefile.in  README  configure.in  generator.py  specfile.spec.in
(+365 files in other folders)
